# rag-demo

./: .gitignore  LICENSE  README.ja.md  README.md  package-lock.json  package.json
apps/web/: middleware.ts  next.config.ts  package-lock.json  package.json  proxy.ts  tsconfig.json
apps/web/app/[locale]/: layout.tsx  page.tsx
apps/web/components/ChatPanel/: ChatPanel.tsx
apps/web/components/Header/: Header.tsx
apps/web/components/Shell/: Shell.tsx
apps/web/components/Sidebar/: Sidebar.tsx
apps/web/components/Viewer/: PDFViewer.tsx  UploadArea.tsx  Viewer.tsx
apps/web/components/Workspace/: WorkspaceClient.tsx
apps/web/constants/: apiRouteBuilders.ts  apiRoutes.ts
apps/web/docs/: init_project.md
apps/web/i18n/: i18n.ts  request.ts
apps/web/i18n/messages/: en.json  ja.json  zh.json
apps/web/styles/: layout.css
docs/: db_schema.md  dev_log.md  mindmap.zh.mm.md  rag_pipeline.mm.md
services/rag-service/: pyproject.toml
services/rag-service/None/: chroma.sqlite3
services/rag-service/app/: main.py
services/rag-service/app/api/: documents.py  ocr.py  search.py  upload.py
services/rag-service/app/constants/: status.py
services/rag-service/app/db/: __init__.py  base.py  session.py
services/rag-service/app/db/models/: chunk.py  document.py  ocr_result.py  user.py
services/rag-service/app/pipelines/: document_pipeline.py
services/rag-service/app/repositories/: chunk_repository.py  document_repository.py  ocr_result_repository.py
services/rag-service/app/services/: chunk_service.py  ducument_service.py  embedding_service.py  llm_service.py  ocr_service.py  search_service.py  upload_service.py
services/rag-service/app/utils/: config.py
services/rag-service/app/utils/mock/: mock_user.py
services/rag-service/app/vectorstore/: chroma_repo.py  schemas.py
services/rag-service/docs/: init_project.md
services/rag-service/uploaded_files/chroma/: chroma.sqlite3
web/: package-lock.json
web/app/: page.tsx
web/docs/: init_project.md
